<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cookingquiz.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight=".6"
        android:src="@mipmap/pasta"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/quizHeader"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight=".6"
        android:text="@string/header_1"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textColor="@android:color/black"
        android:paddingLeft="18sp"
        android:paddingRight="18sp"
        android:layout_marginBottom="16sp"
        android:gravity="bottom"/>

    <TextView
        android:id="@+id/quizQuestion"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight=".3"
        android:textAlignment="center"
        android:text="@string/quiz_question"
        android:visibility="gone"
        android:paddingRight="24sp"
        android:paddingLeft="24sp"
        android:layout_gravity="top"
        />

    <ImageView
        android:id="@+id/burger"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:src="@drawable/burger"
        android:scaleType="fitCenter"
        android:layout_marginBottom="24sp"/>
    <RadioGroup
        android:id="@+id/quizRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:paddingBottom="24sp"
        android:paddingRight="24sp"
        android:paddingLeft="24sp"
        android:visibility="gone">
        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_radio_1"/>
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_radio_2"/>
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_radio_3"/>
        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_radio_4"/>
    </RadioGroup>
<LinearLayout
    android:id="@+id/score_view"
    android:layout_width="match_parent"
    android:layout_height="0sp"
    android:layout_weight="1"
    android:visibility="gone"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/score_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:textSize="48sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outOfFive"
            android:textSize="48sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/commentTextView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:paddingRight="24sp"
        android:paddingLeft="24sp"/>
</LinearLayout>


    <Button
        android:id="@+id/quizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24sp"
        android:padding="8sp"
        android:text="@string/start_button"
        android:onClick="onClick"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>

</LinearLayout>
